tests/models/struct/named/i64/fail/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2.0)]
    value: i64,
}
fn main() {}
